resources/services/mas-sso/mas-sso-staging.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/balance: leastconn
    # Commenting this in our stage env to determine the limits of the 
    # service by performing load tests, so that we can derive a new connection
    # limit - https://issues.redhat.com/browse/MGDSTRM-5086
    # haproxy.router.openshift.io/pod-concurrent-connections: "8"
    haproxy.router.openshift.io/timeout: 30s
    kubernetes.io/tls-acme: "true"
  labels:
    app: keycloak
  name: keycloak-staging
spec:
  host: identity.api.stage.openshift.com
  port:
    targetPort: keycloak
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: keycloak
    weight: 100
