resources/services/mas-sso/mas-sso.route.yaml
# This is a temporary route for the staging MAS SSO Service. It will be replaced
# By https://issues.redhat.com/browse/MGDSTRM-1228
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/balance: leastconn
    haproxy.router.openshift.io/pod-concurrent-connections: "4"
    haproxy.router.openshift.io/timeout: 1s
    openshift.io/host.generated: "true"
  labels:
    app: keycloak
  name: keycloak
spec:
  port:
    targetPort: keycloak
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: keycloak
    weight: 100
